syntax = "proto3";
package kratos.api;

option go_package = "github.com/WH-5/user-service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Bizfig bizfig=3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;

}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
    google.protobuf.Duration dialTimeout = 7;
    int32 database =5;
    string password=6;
  }
  message Other{
    int32 register_limit_everydevice_everyday=1;
    int32 max_failed_login_attempts=2;
    int32 account_lock_duration_minutes=3;
  }
  Database database = 1;
  Redis redis = 2;
  Other other =3;
}
message Bizfig {
    string JWT_SECRET_KEY=1;
    string JWT_SERVICE_KEY=2;
    int32  JWT_EXPIRED_HOUR=4;
    int32 default_unique_length=3;

}